service.yaml
apiVersion: v1
kind: Service
metadata:
  name: servicelrodrif
  labels:
    app: servicelrodrif
spec:
  type: ClusterIP
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: applrodrif
